# edp_probas

./: pyproject.toml
Courses/Part1/: demo1_slide5.py  demo2_slide7.py  demo3_slide8.py  demo4_slide11.py
TPs/TP0/: EqChaleur_parallele.py  TP_EqChaleur.py  TP_RuineJoueur.py
TPs/TP1-20220209/: probleme1_a_completer.py
TPs/TP2/: tp_2.py
tests/: test_edp_probas.py
