[tool.poetry]
name = "edp_probas"
version = "0.1.0"
description = ""
authors = ["Aboussejra <amir@epigno.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
spyder = "^5.2.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
